--- a/MES/MES.csproj
+++ b/MES/MES.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Common\Common\CellTemplateSelector.cs" />
     <Compile Include="Common\Common\ColumnTemplateSelector.cs" />
     <Compile Include="Common\Common\CommandToMethod.cs" />
+    <Compile Include="Common\Common\DockLayoutSaveCommand.cs" />
     <Compile Include="Common\Common\DocumentParamter.cs" />
     <Compile Include="Common\Common\ExportViewModelBase.cs" />
     <Compile Include="Common\Common\GridRowIndicatorHelper.cs" />
