--- a/MES/App.config
+++ b/MES/App.config
@@ -5,54 +5,11 @@
       <section name="MesAdmin.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="DXThemeManager" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
-      <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
   </configSections>
-  <applicationSettings>
-    <DevExpress.LookAndFeel.Design.AppSettings>
-      <setting name="DefaultAppSkin" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="DefaultPalette" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="TouchUI" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="CompactUI" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="TouchScaleFactor" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="DirectX" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="RegisterUserSkins" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="RegisterBonusSkins" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="FontBehavior" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="DefaultAppFont" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="DPIAwarenessMode" serializeAs="String">
-        <value></value>
-      </setting>
-      <setting name="CustomPaletteCollection" serializeAs="Xml">
-        <value />
-      </setting>
-    </DevExpress.LookAndFeel.Design.AppSettings>
-  </applicationSettings>
   <connectionStrings>
     <add name="DSNL_MES" connectionString="Database=DSNL_MES;Server=192.168.31.10,1433;uid=sa;pwd=ejrtksdldkfvl" providerName="System.Data.SqlClient" />
     <add name="Authentication" connectionString="Database=Authentication;Server=192.168.31.10,1433;uid=sa;pwd=ejrtksdldkfvl" providerName="System.Data.SqlClient" />
-    <add name="DSNL_TEST" connectionString="Server=192.168.31.10,1433;Database=DSNL_TEST;UID=sa;PWD=ejrtksdldkfvl" providerName="System.Data.SqlClient" />
+    <add name="DSNL_TEST" connectionString="Server=192.168.100.38,1433;Database=MES_NL;UID=sa;PWD=tltmxparoqkfqn" providerName="System.Data.SqlClient"/>
     <add name="AspnetMembershipConnectionString" connectionString="Database=Authentication;Server=192.168.31.10,1433;uid=sa;pwd=ejrtksdldkfvl" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
