--- a/MES/App.config
+++ b/MES/App.config
@@ -9,7 +9,7 @@
   <connectionStrings>
     <add name="DSNL_MES" connectionString="Database=DSNL_MES;Server=192.168.100.24,1433;uid=sa;pwd=ejrtksdldkfvl" providerName="System.Data.SqlClient" />
     <add name="Authentication" connectionString="Database=Authentication;Server=192.168.100.24,1433;uid=sa;pwd=ejrtksdldkfvl" providerName="System.Data.SqlClient" />
-    <!--<add name="DSNL_TEST" connectionString="Server=192.168.100.38,1433;Database=MES_NL;UID=sa;PWD=tltmxparoqkfqn" providerName="System.Data.SqlClient"/>-->
+    <!--<add name="DSNL_TEST" connectionString="Server=192.168.100.38,1433;Database=DSNL_MES_TEST;UID=sa;PWD=ejrtksdldkfvl" providerName="System.Data.SqlClient"/>-->
     <add name="DSNL_TEST" connectionString="Server=192.168.100.24,1433;Database=DSNL_TEST;UID=sa;PWD=ejrtksdldkfvl" providerName="System.Data.SqlClient"/>
     <add name="AspnetMembershipConnectionString" connectionString="Database=Authentication;Server=192.168.100.24,1433;uid=sa;pwd=ejrtksdldkfvl" providerName="System.Data.SqlClient" />
   </connectionStrings>
